基本完成，取消评论功能。 UI优化以后再考虑。

--- a/osushop/static/css/index_head.css
+++ b/osushop/static/css/index_head.css
@@ -314,8 +314,8 @@ a {
 }
 
 .l_1_70 {
-    width: 195px;
-    height: 70%;
+    width: 200px;
+    height: 200px;
     background-color: white;
 }
 
