--- a/osushop/templates/index.html
+++ b/osushop/templates/index.html
@@ -164,7 +164,7 @@
         <div class="l_1">
             <div class="l_1_70">
 {#                <a href="#"><img class="img_70" src="/media/img/{{ MEDIA_URL }}{{ foo.img }}"></a>#}
-                <a href="good_detail?id={{ foo.id }}"><img class="img_70" src="/media/img/{{ MEDIA_URL }}{{ foo.img }}"></a>
+                <a href="good_detail?id={{ foo.id }}"><img width="200" height="200" class="img_70" src="/media/img/{{ MEDIA_URL }}{{ foo.img }}"></a>
             </div>
             <div class="l_1_15_txt">
                 <a class="list_text" href="/">{{ foo.name }}</a>
