--- a/osushop/static/css/user_center.css
+++ b/osushop/static/css/user_center.css
@@ -13,7 +13,6 @@
 
 .div_in_chuizhi {
     display: flex;
-    /*justify-content: center;*/
     align-items: Center; /*垂直居中*/
 }
 
@@ -127,7 +126,7 @@
 
 .show_1_1 {
     width: 100%;
-    height: 30%;
+    height: 100%;
 }
 
 .tou_20 {
@@ -152,13 +151,18 @@
 
 .last_middle_1 {
     width: 100%;
-    height: 45%;
+    height: 25%;
     border: #e5e5e5 solid 1px;
 }
 
 .last_middle_2 {
     width: 100%;
-    height: 55%;
+    height: 25%;
+    border: #e5e5e5 solid 1px;
+}
+.last_middle_3 {
+    width: 100%;
+    height: 25%;
     border: #e5e5e5 solid 1px;
 }
 
